# iu-bot

./: .gitignore  .pylintrc  Makefile  README.md  iu.py  pyproject.toml  requirements.txt  start-iu.sh
.github/workflows/: ci.yaml
commands/: bias_group.py  calendar.py  hmas.py  rankdown_turn.py  ultimate_bias.py
iu/: main.py  releases_schema.sql
iu/commands/: bias_cards.py  bias_group.py  bias_group_test.py  biases.py  bot.py  calendar.py  calendar_test.py  end_of_year.py  hall_of_fame.py  hearts.py  hma_nominations.py  hmas.py  hmas_test.py  listen_game.py  listen_game_gm.py  lists.py  merch.py  merch_admin.py  merch_user.py  poll.py  poll_test.py  potpourri.py  rankdown_turn.py  rankdown_turn_test.py  releases.py  releases_backfill.py  roles.py  tournaments.py  ultimate_bias.py  ultimate_bias_test.py
iu/common/: discord_ids.py  user.py
iu/db/: biases.py  bot.py  hall_of_fame.py  hma_nominations.py  hmas.py  hof_nominations.py  listen_game.py  lists.py  merch.py  releases.py  roles.py  top_songs.py  tournaments.py
iu/hmas/: 758818887672004609.txt  904751089633615972.txt
iu/scripts/: create_playlist.py  generate_token.py  open_in_browser.py  parse_new_releases.py  temp_backfill.py
iu/services/: youtube.py
iu/tasks/: listen_game.py  scheduled_events.py  tournaments.py
iu/testing/: interaction.py
iu/triggers/: member.py  member_test.py  merch.py  message.py  message_test.py  releases.py  roles.py  scheduled_events.py
iu/ui/: bracket_renderer.py  bracket_template.html.j2  eoy_nominations.py  lists.py  (+7 more)
src/: iu.py
triggers/: member.py  message.py
(+20 files in other folders)
