[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iu-bot"
description = "A Discord bot for the HallyU server"
authors = [
    {name = "Jonathan Hayes", email = "jon.hayes37@gmail.com"}
]
maintainers = [
    {name = "Jonathan Hayes", email = "jon.hayes37@gmail.com"}
]
readme = "README.md"
license = { text = "MIT License" }
version = "1.0"
requires-python = "~= 3.10"